# Python-Morse-Translator

./: .gitignore  LICENSE  README.md  cli_args_handler.py  converters.py  interactive_cli_env.py  main.py  messages.py  morse_dataset.py  pyproject.toml  utils.py
.github/workflows/: ci.yml
api/: app.py  schemas.py
api/routes/: routes.py  v1.py  versions.py
core/: cli_args_handler.py  converters.py  interactive_cli_env.py
data/: morse_dataset.py
docs/: README.ar.md  README.fa.md  README.fr.md
models/: cli_args_handler.py  interactive_cli_env.py
morse_cli/: cli.py
test/: api_tests.py  converter_tests.py  utils_tests.py
views/: messages.py
views/ui/: __init__.py  ctkinter_ui.py
