[project]
name = "morse-translator"
version = "0.1.1"
description = "Morse Code ⇄ Text translator (CLI + FastAPI) — bidirectional conversions, validation utilities, and tests."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "tk>=0.1.0",
    "uvicorn>=0.40.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "data*", "views*", "utilities*", "morse_cli*"]

[project.scripts]
morse = "morse_cli.cli:main"
