[project]
name = "amirstein-morse-translator"
version = "0.3.1"
description = "Multi-interface Morse translator (CLI, API, GUI)"
authors = [{ name = "Amirhossein Gholizadeh" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "tk>=0.1.0",
    "uvicorn>=0.40.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "data*", "views*", "utilities*", "morse_cli*"]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]

[project.scripts]
morse = "morse_cli.cli:main"
